<resources>
    <string name="app_name">PHP conference fukuoka 2018(Unofficial)</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_time_table">Time table</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_about">About</string>
    <string name="schedule">Schedule</string>
    <string name="date_data">Date: June 16Th 2018 [sat]</string>
    <string name="time_data">Time: 10:00AM –6:00PM</string>
    <string name="registerCalendar">Register to the calendar app</string>
    <string name="attendConference">Join the conference.</string>
    <string name="attendParty">Join the after hour party.</string>
    <string name="location">Location</string>
    <string name="location_data">Fukuoka fashion building 8F A・B・C Hall</string>
    <string name="select_calender">Select calender</string>
    <string name="event_name">PHP conference fukuoka 2018</string>
    <string name="event_location">福岡市博多区博多駅前2–10-19　FFB ホール（福岡ファッションビル8階）</string>
    <string name="session_content">Session title:</string>
    <string name="about_me">About this app</string>
    <string name="about_me_text">This app is a unofficial apps for PHP conference Fukuoka 2018.</string>
    <string name="open_source_license">Open source license</string>
    <string name="version_number">Version</string>

    <string name="session_format">%s is start after 5 after minutes.</string>
    <string name="channel_title">Session start notification.</string>
    <string name="channel_description">Notify at session start ago 5 minutes.</string>
    <string name="git_hub_label" translatable="false">GitHub</string>
    <string name="git_hub_url" translatable="false">https://github.com/kenz/phpconfukuoka18</string>
</resources>
